# LGM-fluid-simulator

./: .gitignore  CMakeLists.txt  LICENSE
docs/: ARCHITECTURE.md  BUILD.md  README.md  USER_GUIDE.md
shaders/: boundary.wgsl  collision.wgsl  fullscreen.frag.wgsl  fullscreen.vert.wgsl  rendering.wgsl  streaming.wgsl
src/: main.cpp
src/core/: application.cpp  application.h
src/gpu/: buffer_manager.cpp  buffer_manager.h  compute_pipeline.cpp  compute_pipeline.h  gpu_context.cpp  gpu_context.h  renderer.cpp  renderer.h
src/math/: config.h  constants.h  vector.h
src/simulation/: grid.cpp  grid.h  lbm_simulator.cpp  lbm_simulator.h
src/ui/: input_handler.h  visualization.cpp  visualization.h
src/utils/: logger.h  profiler.h  timer.h
tests/: test_poiseuille.cpp  test_validation.cpp  test_vector.cpp
